--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <section id="showcase" class="text-center">
     <div class="showcase-content">
    
-      <h1 class="l-heading py-1">اهلا بكم في اعدادية الوحدة المهنية <br><span class="primary-text">" Instagram:krade3 "</span></h1> لمراسلتنا
+      <h1 class="l-heading py-1">اهلا بكم في اعدادية الوحدة المهنية <br><span class="primary-text">" Insta:krade3 "</span></h1> لمراسلتنا
 
       <a href="https://m.facebook.com/%D8%A7%D8%B9%D8%AF%D8%A7%D8%AF%D9%8A%D8%A9-%D8%A7%D9%84%D9%88%D8%AD%D8%AF%D8%A9-%D8%A7%D9%84%D9%85%D9%87%D9%86%D9%8A%D8%A9-499007110205270/?tsid=0.590141176791777&source=result" class="btn">اضغط هنا</a>
     </div>
