--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <section id="showcase" class="text-center">
     <div class="showcase-content">
    
-      <h1 class="l-heading py-1">اهلا بكم في اعدادية الوحدة المهنية <br><span class="primary-text">الموقع تحت الصيانة من قبل المهندس علي</span></h1> لمراسلتنا
+      <h1 class="l-heading py-1">اهلا بكم في اعدادية الوحدة المهنية <br><span class="primary-text">INSTA:krade3</span></h1> لمراسلتنا
 
       <a href="https://m.facebook.com/%D8%A7%D8%B9%D8%AF%D8%A7%D8%AF%D9%8A%D8%A9-%D8%A7%D9%84%D9%88%D8%AD%D8%AF%D8%A9-%D8%A7%D9%84%D9%85%D9%87%D9%86%D9%8A%D8%A9-499007110205270/?tsid=0.590141176791777&source=result" class="btn">اضغط هنا</a>
     </div>
@@ -226,9 +226,9 @@
 
 <footer class="text-center py-1 bg-dark">
   <p style=" text-align: center;
-  background-color: #f30742a0;
+  background-color: ;
   width: 100%;
-  font-size:20px;
+  font-size:18px;
   color: #22171a;
   height: 30px;
   
@@ -236,13 +236,11 @@
  
 ">جميع الحقوق محفوظة للأعدادية الوحدة المهنية2022</p>
 </footer>
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d833.600216600516!2d44.429328999999996!3d33.308333999999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x309e3405a66e751!2zMzPCsDE4JzMwLjAiTiA0NMKwMjUnNDUuNiJF!5e0!3m2!1sar!2siq!4v1645660655727!5m2!1sar!2siq" width="350" height="700 style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d833.600216600516!2d44.429328999999996!3d33.308333999999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x309e3405a66e751!2zMzPCsDE4JzMwLjAiTiA0NMKwMjUnNDUuNiJF!5e0!3m2!1sar!2siq!4v1645660655727!5m2!1sar!2siq" width="423" height="700 style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 </section>
 
 
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d833.600216600516!2d44.429328999999996!3d33.308333999999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x309e3405a66e751!2zMzPCsDE4JzMwLjAiTiA0NMKwMjUnNDUuNiJF!5e0!3m2!1sar!2siq!4v1645660655727!5m2!1sar!2siq" width="350" height="700 style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-  </section>
-
+ 
 
 
   <!-- jQuery -->
